Update compatible sets file after successful release

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,14 +14,6 @@ jobs:
       - name: Render packages.dhall
         run: |
           nix-shell --run '>packages.dhall dhall <<< ./src/packages.dhall'
-      - name: Update latest-compatible-sets.json
-        run: |
-          nix-shell --run './update-latest-compatible-sets.sh ${{ github.ref }}'
-      - name: Commit changes to latest-compatible-sets.json
-        uses: stefanzweifel/git-auto-commit-action@v4
-        with:
-          commit_message: Update latest-compatible-sets.json
-          file_pattern: latest-compatible-sets.json
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
@@ -42,3 +34,15 @@ jobs:
           asset_path: ./packages.dhall
           asset_name: packages.dhall
           asset_content_type: application/x-dhall
+        # Now checkout master in order to update the latest-compatible-sets.json file
+      - uses: actions/checkout@v2
+        with:
+          ref: 'master'
+      - name: Update latest-compatible-sets.json
+        run: |
+          nix-shell --run './update-latest-compatible-sets.sh ${{ github.ref }}'
+      - name: Commit changes to latest-compatible-sets.json
+        uses: stefanzweifel/git-auto-commit-action@v4
+        with:
+          commit_message: Update latest-compatible-sets.json
+          file_pattern: latest-compatible-sets.json
